# GeoCon

./: CMakeLists.txt
geotrans/CCS/src/dtcc/: egm2008_geoid_grid.cpp
geotrans/CCS/src/dtcc/CoordinateSystems/datum/: DatumLibraryImplementation.cpp
geotrans/CCS/src/dtcc/CoordinateSystems/mgrs/: MGRS.cpp
geotrans/CCS/src/dtcc/CoordinateSystems/usng/: USNG.cpp
include/geocon/: geodetic2ecef.h  geodetic2local.h
